--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>French Toast</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/french-toast.html">French Toast</a>
+    <h1>French Toast</h1>
 </body>
 </html>
