Add French Toast recipe content

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -7,5 +7,38 @@
 </head>
 <body>
     <h1>French Toast</h1>
+    <a title="Ralph Daily from Birmingham, United States, CC BY 2.0 &lt;https://creativecommons.org/licenses/by/2.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:French_Toast_(16251867289).jpg"><img width="512" alt="French Toast (16251867289)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/French_Toast_%2816251867289%29.jpg/512px-French_Toast_%2816251867289%29.jpg"></a>
+    <h2>Description</h2>
+    <p>French Toast is a classic breakfast dish cherished for its simplicity and deliciousness. Made from slices of bread soaked in a mixture of beaten eggs, milk, and a touch of vanilla extract, French Toast transforms stale bread into a warm, golden delight. As it sizzles on a hot griddle, it crisps up on the outside while remaining irresistibly soft and custard-like on the inside. The magic happens when it's generously dusted with powdered sugar, drizzled with maple syrup, or adorned with fresh berries and a dollop of whipped cream. Whether served as a cozy weekend brunch treat or a quick morning indulgence, French Toast is a timeless comfort food that never goes out of style.</p>
+    <p>Enjoy creating this simple yet delectable breakfast classic using our recipe, and savor the warm, sweet aroma that fills your kitchen as you prepare it. Perfectly paired with a hot cup of coffee or a glass of fresh orange juice, French Toast is a morning ritual that brings comfort and joy to any day. Bon appétit!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Bread slices</li>
+        <li>Eggs</li>
+        <li>Milk</li>
+        <li>Vanilla extract</li>
+        <li>Sugar</li>
+        <li>Cinnamon (optional)</li>
+        <li>Salt</li>
+        <li>Butter or cooking oil (for frying)</li>
+        <li>Powdered sugar (for dusting)</li>
+        <li>Maple syrup</li>
+        <li>Fresh berries (optional, for garnishing)</li>
+        <li>Whipped cream (optional, for topping)</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Begin by gathering all the ingredients for your French Toast.</li>
+        <li>In a mixing bowl, crack open the eggs and beat them until the yolks and whites are well combined.</li>
+        <li>Pour in the milk, add a dash of vanilla extract, and a pinch of sugar. For an extra burst of flavor, you can sprinkle in some ground cinnamon (if desired) and a pinch of salt.</li>
+        <li>Whisk the mixture thoroughly, ensuring that all the ingredients are nicely blended together.</li>
+        <li>Heat a skillet or griddle over medium heat and add a small amount of butter or cooking oil. Allow it to melt and coat the cooking surface evenly.</li>
+        <li>Take a slice of bread and dip it into the egg mixture, making sure both sides are well soaked but not soggy.</li>
+        <li>Place the soaked bread on the heated skillet. Cook until it turns golden brown and slightly crispy on one side, usually about 2-3 minutes.</li>
+        <li>Flip the bread to the other side and cook until it's similarly golden brown and deliciously fragrant.</li>
+        <li>Transfer the cooked French Toast to a plate, and repeat the process with the remaining slices of bread.</li>
+        <li>Serve your French Toast warm, generously dusted with powdered sugar and drizzled with your favorite syrup (such as maple syrup). Optionally, you can garnish it with fresh berries and a dollop of whipped cream.</li>
+        <li>11. Savor the warm, sweet aroma filling your kitchen as you prepare this timeless breakfast classic. French Toast pairs perfectly with a hot cup of coffee or a glass of fresh orange juice, making it a morning ritual that brings comfort and joy to any day. Bon appétit!</li>
+    </ol>
 </body>
 </html>
