Add Pancakes recipe page and content

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/french-toast.html">French Toast</a>
+    <a href="./recipes/pancakes.html">Pancakes</a>
 </body>
 </html>
