--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/french-toast.html">French Toast</a>
-    <a href="./recipes/pancakes.html">Pancakes</a>
-    <a href="./recipes/apple-pie.html">Apple Pie</a>
+      <a class="links" href="./recipes/french-toast.html">French Toast</a>
+      <a class="links" href="./recipes/pancakes.html">Pancakes</a>
+      <a class="links" href="./recipes/apple-pie.html">Apple Pie</a>
 </body>
 </html>
